Added file watcher and compiler support (SASS/SCSS compiler included) The new file menu (when you do a right-click on a directory in the file panel) is now customizable in user's preferences ! Directories can now be deleted with a right click -> Delete --- Bug fixes --- Added an icon to close the user's preference editor Fixed a problem when performing for the first time a commit on a project Fixed a bug in commit mode : Can't read directories recursively --- Misc updates --- Added the status bar (at the bottom)

--- a/server/compilers/SASS/package.json
+++ b/server/compilers/SASS/package.json
@@ -5,7 +5,8 @@
 	"author-type": "GitHub account",
 
 	"package": {
-		"main": "compiler.js",
+		"require": ["sass.js"],
+		"compiler": "compiler.js",
 		"acceptDirectories": false
 	}
 }
